--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -17,6 +17,10 @@
 %\date{}
 
 
+%avoid overhang
+\tolerance=5000
+
+
 
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
@@ -52,7 +56,7 @@ And \citet{Searle:1990em} contrasts park visitors who  simultaneously run to a c
 These and other contrast cases invite the question, 
 How do cases involving shared agency differ from cases involving only  parallel individual agency? 
 
-The first contrast case, Gilbert's, shows that the difference can’t be just  a matter of coordination because people who are merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
+The first contrast case, Gilbert's, shows that the difference can’t be just  a matter of coordination because people who merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
 Note also that in both cases each individual's walking is intentional, so our intentionally walking together cannot be  only a matter of our each intentionally walking.
 The second contrast case, Searle's, shows that the difference can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too.%
 \footnote{
@@ -61,7 +65,7 @@ This use of contrast cases resembles \citet{Pears:1971fk}: he uses contrast case
 Perhaps, then, a notion of shared intention is needed to distinguish the two cases.  
 Perhaps it is our acting on a shared intention that we walk together which distinguishes us from two strangers who happen to be walking side by side.%
 \footnote{
-Many philosophers agree that a notion of shared intention is useful for understanding acting together. 
+Many philosophers hold that a notion of shared intention is useful for understanding acting together. 
 Compare \citet[p.\ 5]{Gilbert:2006wr}: `I take a collective action to involve a collective intention.'  See also  
 	\citet[p.\ 381]{Carpenter:2009wq}, 
 	\citet[p.\ 369]{Call:2009fk}, 
@@ -98,7 +102,7 @@ We shall also suggest a revision to avoid the counterexample.
 
 Before going further we must distinguish two versions of the claim that (1)--(3) are collectively sufficient for shared intention.
 The \emph{weak claim} is that there is some J such that these conditions are sufficient for you and I to intend that we J.
-The \emph{strong claim} is that for any J, these conditions are sufficient for you and I to intend that we J. 
+The \emph{strong claim\label{strong_claim}} is that for any J, these conditions are sufficient for you and I to intend that we J. 
 Our initial counterexample will be directed to the strong claim.
 However, after we have constructed this counterexample it will become clear that there are also counterexamples involving a wide range mundane activities to which Bratman explicitly takes his account to apply.
 Even walking together%
@@ -123,8 +127,8 @@ can serve as counterexamples.
 
 
 
-How could we show that our meeting Bratman's conditions, (1)--(3), is not in fact sufficient for us to have a shared intention? 
-We seek a case where the conditions are met although we lack a shared intention.
+To show that  Bratman's conditions, (1)--(3), are not in fact sufficient for shared intention we need 
+a case where the conditions are met and we lack a shared intention.
 But how could we determine that we lack a shared intention?
 As already mentioned, the notion of shared intention is supposed to 
 	make it possible to 
@@ -136,9 +140,11 @@ Suppose, then, that we had a trio of cases, A, B and C, each involving two agent
 Suppose, further, that A and B involved parallel agency only, whereas C involved shared agency.
 Then we could be sure that A and B do not involve shared intention.
 Now suppose 
-	that, for some relevant J, Bratman's conditions, (1)--(3) above, were met in cases B and C alike, 
-	that in each case the structure of intention and knowledge played an appropriate role in guiding the agents' actions,
-	and that in each case the agents thereby successfully J.
+	that, for some J, Bratman's conditions, (1)--(3) above, were met in cases B and C alike.
+Suppose also that in each case, B and C, the structure of intention and knowledge mention specified by Bratman's conditions 
+ played an appropriate role in guiding the agents' actions,
+	and that in each case the agents did thereby  successfully J.
+Finally, suppose that cases A, B and C are as similar as possible except for the differences mentioned.
 Then case B would be our counterexample:
 Bratman's conditions are met but there is no shared intention.
 This is how our counterexample will work.
@@ -213,7 +219,7 @@ To illustrate, first consider Bratman's `mafia case' where two people go to New 
 Next consider a paradigm case of where two friends cooperatively go to New York together.
 It's possible to conceive of an act type of going to New York together which is broad enough that both cases, the coercive and the cooperative, fall under it.
 And it's even possible to desire or intend to be involved in an act of this type.
-A gangster might intend to go to New York with a future victim without having yet decided whether they will do this cooperatively or coercively.
+A gangster might intend to go to New York with someone without having yet decided whether they will do this cooperatively or coercively.
 
 A consequence is that, in the right situations, one of us can rationally intend that we J, and can intend this unilaterally, that is without depending on anyone else intending that we J. 
 Suppose you know that I am going to New York via a certain route at a particular time, 
@@ -230,6 +236,7 @@ Note also that this claim must be true if Bratman's account of shared intention 
 
 
 \section{Unshared Intentions}
+\label{sec:unshared_intentions}
 As a further preliminary we need to introduce a definition.
 Let us stipulate that we have an \emph{unshared intention} that we <J$_1$, J$_2$> where J$_1$$\neq$J$_2$ just if:
 %
@@ -269,11 +276,12 @@ All of this is common knowledge for Ayesha and Ahmed.
 They both know who has which task, what constraints they face and what their motives are.
 
 Consider the possibility of one player intending, unilaterally, that the two players do something.
-Suppose that one of the players---Ayesha, say---can knowledgeably predict that if she performs a certain sequence actions, <a$_1$, a$_2$, ...\ a$_n$>, then Ahmed will simultaneously perform certain other actions, <b$_1$, b$_2$, ...\ b$_n$>,
+Suppose that one of the players---Ayesha, say---can knowledgeably predict that if she performs a certain sequence of actions, <a$_1$, a$_2$, ...\ a$_n$>, then Ahmed will simultaneously perform certain other actions, <b$_1$, b$_2$, ...\ b$_n$>,
  and the upshot will be that the cross hits the red square.
 Were this to happen, it would be true that Ayesha and Ahmed made the cross hit the red square.
 Suppose, further, that Ayesha can intend to perform those actions <a$_1$, a$_2$, ...\ a$_n$>.
-Then Ayesha can intend, unilaterally, that they, Ayesha and Ahmed, make the cross hit the red square (see Section \vref{sec:netural_wrt_shared_intentionality}).
+Then Ayesha can intend, unilaterally, that they, Ayesha and Ahmed, make the cross hit the red square.
+(This intention concerns an action conceived of as neutral with respect to shared intentionality; see  Section \vref{sec:netural_wrt_shared_intentionality}).
 
 Unshared intentions require a kind of symmetry.
 Let us suppose that the above sequences of actions,
@@ -301,9 +309,9 @@ our individual subplans concerning our <J$_1$, J$_2$>-ing \emph{mesh} just in ca
 \end{quote}
 %
 To illustrate, 
-their subplans would fail to mesh if, in intending that they make the cross hit the red square,  Ayesha's plans had included pushing Ahmed out of the way and seizing his controls. 
-They would also fail to mesh if Ayesha were planning to trick Ahmed into a situation where we would be unable to perform the actions he had been planning.
-But in the case we have been describing, the agents subplans mesh perfectly.
+Ayesha's and Ahmed's subplans would fail to mesh if, in intending that they make the cross hit the red square,  Ayesha's plans had included pushing Ahmed out of the way and seizing his controls. 
+They would also fail to mesh if Ayesha were planning to trick Ahmed into a situation where he would be unable to perform the actions he had been planning.
+But in the case we have been describing, the agents' subplans mesh perfectly.
 Each agent's subplans involve manipulating his or her own controls,
 and the successes each seeks in doing this depends on the other successfully carrying out their subplans.
 So Ayesha can rationally intend that they, Ayesha and Ahmed, make the cross hit the red square in accordance with and because of their intentions and meshing subplans of them.
@@ -387,13 +395,15 @@ Just by chance they have been assigned identical tasks: Beatrice's task is to ma
 So where Ayesha and Ahmed have an unshared intention that they <J$_1$, J$_2$>,
 Beatrice and Baldric meet Bratman's conditions (1)--(3) for having a shared intention that they J$_1$.  
 But Beatrice, in planning and acting, does not rely on the coincidence of their intentions; and nor does Baldric.
-(Beatrice relies on the fact Baldric intends that they J$_1$, of course; but she does not rely on the fact that Baldric intends what she intends.)
-Furthermore, due to an artefact of the way the game is structured,
+(Beatrice relies on the fact Baldric intends that they J$_1$, of course; but she does not rely on the fact that Baldric intends what she intends.) 
+Let us further stipulate that, due to an artefact of the way the game is structured,
 the unshared intention and the 
 	Bratman intention 
 	\label{df:bratman_intention}
-	(as we might label the structure of intention and knowledge while leaving open whether it constitutes a shared intention), result in the two pairs performing same actions in the same way.
-That is, Beatrice reasons about Baldric much as Ayesha reasons about Ahmed and Beatrice and does what Ayesha does, and likewise for Baldric and Ahmed. 
+	(as we might label the structure of intention and knowledge 
+	%specified in conditions (1)--(3) on page \pageref{quote:bratman_account}
+	while leaving open whether it constitutes a shared intention) result in the two pairs performing same actions in the same way.
+That is, Beatrice reasons about Baldric much as Ayesha reasons about Ahmed and Beatrice and does what Ayesha does; and likewise for Baldric and Ahmed. 
 
 
 We claim that Beatrice and Baldric have a shared intention that they J$_1$
@@ -409,14 +419,14 @@ This claim follows from the similarities of the two cases.
 The only difference is that Beatrice and Baldric happen to be assigned the same task, whereas Ayesha and Ahmed are not.
 And neither Beatrice nor Baldric makes use of the fact that they have the same task. 
 (This is not due to ignorance: it's just how they choose to approach their tasks.)
-So if we consider on how  
-		the case of Beatrice and Baldric
+So if we consider  how  
+		 Beatrice and Baldric's case
 	differs from
 		 that of Ayesha and Ahmed,
 we can see that these differences do not plausibly amount to a difference with respect to shared agency.
 Shared intention cannot feature in one case but not the other.
 
-To show that Beatrice and Baldric do not have a shared intention it remains only for us to show that Ayesha and Ahmed do not have one. 
+To show that Beatrice and Baldric do not have a shared intention it remains only to show that Ayesha and Ahmed do not have one. 
 Here we must be careful.
 First note that,
 	 since Bratman provides only sufficient conditions for shared intention, 
@@ -425,10 +435,10 @@ For all Bratman says, the conditions defining unshared intention might  be suffi
 
 But doesn't shared intention require at least this much,
 that there be a single activity  about which each the agent involved has an intention? 
-This might reasonably be doubted by those who, like Bratman, reject the Simple View according to which when an individual intentionally F-s she has an intention concerning her F-ing \citep{Bratman:1984jr}.
+This might reasonably be doubted by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
 So 
 	we shall not infer  that Ayesha and Ahmed lack a shared intention
-	just because (by construction) there is no F such that Ayesha and Ahmed each intend that they, Ayesha and Ahmed, F.
+	just because (by construction) there is no J such that Ayesha and Ahmed each intend that they, Ayesha and Ahmed, J.
 
 Can we then appeal directly to intuition to show that Ayesha and Ahmed lack a shared intention?
 Ayesha sees Ahmed's actions as constraints on her own, or else as opportunities.
@@ -441,7 +451,7 @@ But Ayesha and Ahmed's interaction consists entirely in this sort reciprocal exp
 Perhaps it is clear enough that 
 the sort of shared agency that an account of shared intention is supposed to capture must involve more than this. 
 If so, we can already claim that Ayesha and Ahmed are not acting on a shared intention.
-But philosophers' intuitions about shared agency may not be entirely, so it would be better if we could avoid such a blunt appeal to intuition.
+But philosophers' intuitions about shared agency may vary, so it would be better if we could avoid such a blunt appeal to intuition.
 
 How else could we support the claim that Beatrice and Baldric lack a shared intention? 
 As mentioned at the start, 
@@ -449,7 +459,7 @@ the contrast cases are often used to anchor intuitions in theorising about share
 In the next section we shall further support our claim by contrasting Beatrice and Baldric's case with a further case, one which is as similar as possible and which does seem to involve shared agency.
 The fact that Beatrice and Baldric's case contrasts with this new case will support the claim that Beatrice and Baldric lack shared intention.
 This is the aim of the following section.
-A first motive for introducing this new contrast case is that it provides an indication concerning what is missing from Bratman's account, and so may help us to understand why his conditions are not sufficient for shared intention.
+A further motive for introducing this new contrast case is that it provides an indication concerning what is missing from Bratman's account, and so may help us to understand why his conditions are not sufficient for shared intention.
 
 
 
@@ -471,7 +481,7 @@ we shall contrast Beatrice and Baldric's case with a third case that is as simil
 First we need to introduce the notion of an agent-neutral plan.
 We stipulate that a planning process, or a plan, is \emph{agent-neutral} just if it does not involve identifying any particular agents.  
 This sort of planning is quite common.
-For example, some housemates who have decided to take on an allotment to grow vegetables might sit down together to plan what needs doing without yet assigning roles to particular individuals. 
+For example, some housemates who have decided to make a pizza might sit down together to plan what needs doing without yet assigning roles to particular individuals. 
 In so planning, each housemate is thinking about what is to be done and not what she herself will do.  
 %(This is an idealisation, of course.)
 At some point the housemates stop planning.
@@ -482,15 +492,22 @@ But suppose the housemates do divide up the roles in a way that is acceptable to
 	and that each implements her part in the plan.
 Then each conceives of her own and the others' actions as part of single plan directed to achieving a single outcome.
 
-In the above example of agent-neutral planning,
+In this example
 	the housemates plan together and agree on a common plan.
 	Planning together is plausibly an activity which involves shared agency.
-	Note, however, that an individual can construct an agent-neutral plan by herself, even if its eventual execution will involve others.
-	In fact, two or more individuals who are assigned a task might each individually engage in agent-neutral planning in parallel.
-	The task demands and their planning strategies may conspire to ensure that they each come up with the same agent-neutral plan.
-	The task demands and manifest properties of the agents, such as their distribution in space, may also ensure that each agent also assigns the same roles to the same individuals.
+	Note, however, that an individual can construct an agent-neutral plan by herself, even if its eventual execution will involve others. 
+	In fact, two or more individuals who are assigned the same task and who will eventually collaborate might first each individually engage in agent-neutral planning.
+	
+Suppose, then, that our pizza-making housemates each individually devise an agent-neutral plan and come up with an assignment of agents to roles.  
+What could ensure that their parallel planning results in identical plans?
 (Strictly speaking it is not necessary for the plans and role assignments to be identical; it is enough if the resulting agent-specifying plans are, in a special sense, compatible.%
 \footnote{
+For an example of compatible plans, suppose that our task is to press a button simultaneously. 
+If your plan is that each of us will to start to act in exactly 60 seconds whereas my plan specifies that you are the leader and we will start to act when you do, then our plans are compatible.
+Consider also a case in which our task is to transport some apples and pears to a warehouse. 
+My plan involves you taking care of the apples while I put the pears into the yellow crates and load them into the van through the side door.
+If your plan involves me taking care of the pears while you put the apples into the green crates and load them into the van through the rear doors, our plans are compatible.
+Here is one way to capture this intuitive notion of compatibility.
 \label{fn:df_compatible}
 Suppose that, for some outcome, two or more agents each have a plan for the realisation of that outcome. 
 (These plans may, but need not, specify roles for all of the agents; but the plans must be agent-specific, not agent-neutral.)
@@ -500,12 +517,15 @@ no agent would normally be prevented from performing the role she is assigned in
 and
 (ii)
 if all facts about which agents have which roles in which plans were common knowledge to the agents,
-this would not affect the rationality of their each acting on the intention that they realise the outcome by performing the role she is assigned in her own plan.
+this would not affect the instrumental rationality of their each acting on the intention that they realise the outcome by performing the role she is assigned in her own plan.
 %	each agent could rationally act on the intention that they realise the outcome by performing the role she is assigned in her own plan,
 %	and she could do so even if all facts about which agents are performing which roles in which plans were common knowledge to the agents.
-To illustrate, suppose that our task is to press a button simultaneously. 
-If your plan is that each of us will to start to move in exactly 60 seconds and press the button 5 seconds later whereas my plan specifies that you are the leader and we are each to press the button 5 seconds after you start moving, then our plans are compatible.
 })
+Communication but not necessary ***here
+	
+		The task demands and their planning strategies may conspire to ensure that they each come up with the same agent-neutral plan.
+	The task demands and manifest properties of the agents, such as their distribution in space, may also ensure that each agent  assigns the same roles to the same individuals.
+
 %
 Finally, each agent may know enough about herself and the others to be able to determine, without communicating, whether the plan and role assignments will be acceptable to everyone. 
 	And all of this---that they engage in parallel, agent-neutral planning resulting in identical (or compatible) plans and role assignments, which are acceptable to all---may be common knowledge to the agents.
@@ -530,7 +550,7 @@ and
 %In speaking loosely about planning your own and others actions, we mean the activity of constructing an agent-neutral plan and assigning roles as described above.
 %}
   Of course, in planning your only your own actions, it may be necessary to consider how others' actions will affect, and be affected by, your won.
-But in this case, the others' actions feature in your planning as constraints and opportunities.
+But in this case,  others' actions feature in your planning as constraints and opportunities.
 By contrast, forming a plan for your own and others' actions 
 	involves conceiving of your own and the others' actions as elements in a single plan directed to a single outcome.
 
@@ -570,7 +590,7 @@ two agents have a \emph{Bratman intention} that they J just if they meet conditi
 %
  each pair acts on this intention and each pair ends up performing the same sequence of actions.
 The difference is just that Beatrice and Baldric make no use of the fact that they are performing the same task.
-	This fact does not show up in their planning. 
+	This fact does not feature in their planning. 
 	Rather, each plans her own actions only and treats the other's actions as constraints to work around or opportunities to exploit.
 By contrast, Caitlin and Ciaran embrace the fact that they are performing the same task. 
 They may not like having to act together; in fact each may far prefer to act alone were that possible.
@@ -586,31 +606,69 @@ Given the way Beatrice and Baldric's case contrasts with Caitlin and Ciaran's,
 we conclude that Beatrice and Baldric do not have a shared intention.
 But, by construction, 
  Beatrice and Baldric do meet Bratman's conditions for shared intention, and they do act appropriately on the corresponding intentions and knowledge. 
- So Beatrice and Baldric's case  is a counterexample to sufficiency of Bratman's conditions for shared intention (see (1)--(3) on page \pageref{quote:bratman_account}).
+ So Beatrice and Baldric's case  is a counterexample to sufficiency of Bratman's conditions for shared intention.
 
 
-In describing Caitlin and Ciaran we have not introduced contralateral commitments or other elements foreign to Bratman's account of shared agency. 
+In describing Caitlin and Ciaran we have not introduced contralateral commitments or any other element foreign to Bratman's account of shared agency. 
 Our counterexample draws on the same planning resources Bratman's account draws on, with just one addition.
 The addition is the idea that agents can conceive, or fail to conceive, of their actions as part of a single plan. 
-In at least some cases, shared agency differs from individual agency in part because shared agency involves changing perspective so that one’s own and other’s actions are conceived of as parts of a single plan.
+In at least some cases, shared agency differs from individual agency in part because shared agency involves changing perspective so that one’s own and others' actions are conceived of as parts of a single plan.
 
+
+\section{Mundane Counterexamples}
+Beatrice and Baldric's case is a counterexample to the claim that for any J, Bratman's conditions, (1)--(3) on page \pageref{quote:bratman_account}, are collectively sufficient for us to have a shared intention that we J.
+(We called this the `strong claim' earlier, \vpageref{strong_claim}.)
+If this counterexample were an isolated case, it might be tempting to suppose that it can provide little insight into shared agency.
+%After all, the sorts of activity that Bratman focuses on are things like walking together and painting the house together.
+Could proponents of Bratman's view avoid counterexamples by claiming that the his conditions are sufficient for mundane exercises of shared agency such as those involved in walking together or painting a house together?
+In this section we show that they could not.
 Given that Beatrice and Baldric's case is a counterexample,
 there are also many further counterexamples involving mundane activities and less elaborate props.
-Here, for instance, is how Beatrice and Baldric walk together.
+
+Here is how Beatrice and Baldric walk together.
 They are firmly tied at the ankle, and neither is strong enough to move without the other.
 Beatrice needs to get to the corner, and so does Baldric.
 Further, they have a Bratman intention that they walk to the corner, and they act on this intention in walking to the corner.
 As before, each plans her own walking in the light of her predictions about how the other will walk, treating the other's actions as constraints and opportunities.
 This is not a case of shared agency.
-The reason is not that Beatrice and Baldric are tied together against their will; 
-after all, many cases of shared agency are involuntary in this sense.
+The reason is not that Beatrice and Baldric are tied together against their wills; 
+after all, many cases of shared agency involve agents who are unwillingly bound to each other.
 The reason their walking does not involve shared agency 
 is rather that each conceives of the others' intentions and actions only as constraints and opportunities.
-They fail to make any use of the fact that they intend the same outcome,
- and so they fail see their actions as part of a single plan.
+Beatrice has a plan for what she, Beatrice, will do to ensure that they arrive at the corner; and Baldric likewise plans what he only will do.
+Each agent's plan relies on predictions about how the other will act and contains subplans which are conditional on the other's subplans and actions.
+But this involves no more than the sort of interdependence that might hold between two plans directed at different ends, as in cases of unshared intention.
+Beatrice and Baldric fail to make any use of the fact that they each intend the same thing, namely that they walk to the corner.
+
+
+For another counterexample, consider house painting.  
+First imagine that Ayesha and Ahmed are tasked with painting the outsides of adjacent houses on the same day,
+which happens to be windy.
+Each wants their house to be painted a single colour, and would prefer that it not be painted at all rather than that it be painted in several colours.
+But because they are spraying the paint onto the houses in blustery winds, neither can avoid spraying a significant quantity of paint onto the other's house as well as their own house. 
+In one respect this is fortunate. 
+For they will each lose so much paint from spraying in windy weather that, normally, neither would have enough paint to cover her house.
+But if they each make use of wind-borne spray from the other, both can succeed.
+They therefore form an unshared intention concerning their house painting projects. 
+(The notion of  unshared intention is explained in Section \vref{sec:unshared_intentions}.)
+In acting on this unshared intention,
+Ayesha starts painting first, using a colour which she knows is acceptable and available to Ahmed.
+Ayesha and Ahmed then each plan a route around their own house which will keep them out of the path of the other painter while also saving paint by taking advantage of foreseeable  wind-borne paint from the other.
+
+Ayesha and Ahmed's house painting involves only unshared intention and is therefore not a counterexample.
+But now imagine that there is a single house which Beatrice and Baldric are each motivated to paint.
+Because neither has sufficient paint for the job, they need to work together if they are to succeed.
+They therefore form a Bratman intention that they paint the house.
+But in acting on this intention, they plan and act much as Ayesha and Ahmed do.
+Each agent plans what she will do to ensure that they paint the house, treating the other's intentions and actions as constraints and opportunities. 
+Although the agents' plans and intentions interlock, 
+the agents do not conceive of their actions as parts of a single plan.
+From either agent's point of view, their intentions and actions are no more intimately related than are Ayesha and Ahmed's.
+This is not shared agency.
+
 
 Beatrice and Baldric's attitude may seem unnatural. 
-Perhaps humans in their situation would not normally fail to exploit the fact that they have the same task in the way that these agents do.
+Perhaps it is hard to believe that ordinary people in their situation would  fail to exploit the fact that they have the same task.
 This may be why Bratman's conditions appear, misleadingly, to be sufficient for shared intention.
 
 
@@ -624,9 +682,9 @@ This requirement is that, concerning our shared intention that we J, we each int
 The case of Beatrice and Baldric suggests that this requirement is not strong enough.
 And the case of Caitlin and Ciaran suggests that we might try strengthening it by appealing in some way to the idea that each agent can have a plan specifying roles for all of the agents.
 
-One way to strengthen Bratman's account would be by adding a condition to his three.
+One way to strengthen Bratman's account would be by adding a fourth condition his three conditions.
 An alternative, which we prefer, is to introduce a new restriction on how agents who have a shared intention may conceive of J in intending that they J.
-As we have seen, Bratman's account requires only that, in some cases, the agents conceive of J in a way that is neutral with respect to shared intentionality.
+As we have seen, Bratman's account requires only that, in some cases, the agents conceive of J in a way that is neutral with respect to shared intentionality (see Section \vref{sec:netural_wrt_shared_intentionality}).
 We shall suggest a further requirement that is compatible with this one.
 
 We stipulate that an activity is \emph{distributed} just if: 
@@ -659,7 +717,7 @@ As the activity unfolds in this way, each gradually adds details to her plan and
 
 Distributed activities can be simple.
 In walking to a metro station together,
-two friends may each form and act on a plan that specifies some details of both of their movements.
+two friends may each form and act on a plan that specifies some details of both of their actions.
 This is enough for their activity to be distributed in the above sense.
 
 When two or more agents each intend that they do something, 
@@ -747,20 +805,20 @@ Our aims here were only
 
 \section{Conclusion}
 We started with some contrasts between shared agency and parallel but merely individual agency.
-These provide one intuitive fix on the notion of shared intention: 
+These provide an intuitive fix on the notion of shared intention: 
  shared intention, whatever it is, is what distinguishes thinks like two friends walking somewhere together from things like two strangers who walk the same route side by side.
 By introducing new contrast cases,
 we provided a counterexample to the view that a certain interlocking structure of intention and knowledge is sufficient for shared intention. 
-Two agents might meet conditions
-Bratman offers as sufficient for shared intention---that is, it might be common knowledge to them that they might each intend that they J and intend that they J in accordance with and because of these intentions and meshing subplans of them---even though they lack a shared intention.
+Two agents might lack a shared intention even though they meet conditions Bratman offers as sufficient for shared intention
+That is, they might lack a shared intention even though it is common knowledge to them that they  each intend that they J and intend that they J in accordance with and because of these intentions and meshing subplans of them.
 
 Bratman's conditions are not sufficient for shared intention because they leave open the possibility that two or more agents could meet his conditions while each failing to make use of the fact that there is a single outcome to which all of their actions are directed.
 When this happens, each agent conceives of the others' actions merely as constraints and opportunities.
-Bratman's conditions may initially appear be sufficient for shared intention because it may be natural that when for agents meet his conditions to make use of the fact that there is a single outcome to which all of their actions are directed and  to conceive of all their actions as parts of a single plan. 
+Bratman's conditions may initially appear be sufficient for shared intention because it may be natural for agents who meet his conditions to make use of the fact that there is a single outcome to which all of their actions are directed and  to conceive of all their actions as parts of a single plan. 
 Our counterexample, the case of Beatrice and Baldric, shows that although this may be natural, it not necessary.
 
 We identified a way to revise Bratman's account so as to avoid this sort of counterexample without departing substantially from his planning approach.
-The remedy we propose hinges on the possibility that an agent, in planning for an outcome, can sometimes plan both her own and other agent's actions.
+The remedy we propose hinges on the possibility that an agent, in planning for an outcome, can sometimes plan both her own and other agents' actions.
 Further, in the right circumstances,
 two or more agents with the same task
 	can each individually specify roles for all of the agents in planning for that task.
@@ -772,8 +830,8 @@ This enables us to capture the idea that agents acting on a shared intention con
 % is by appeal to the idea that each agent has a plan for all of their actions.
 
 No amount of forming intentions about other's intentions and acting on knowledge of such intentions is sufficient, all by itself, for shared intention.  
-In many, perhaps all cases, shared agency requires changing perspective 
-to conceive of one's own and other's intentions and actions as part of a single plan.
+In many or all cases, shared agency requires changing perspective 
+to conceive of one's own and others' intentions and actions as parts of a single plan.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
